Left aligned text and fixed software section

--- a/css/main.css
+++ b/css/main.css
@@ -437,27 +437,31 @@ p.larger-text{
 	border: 1px solid #ccc;
 	margin: 5px 5px;
 	padding: 0px;
-  overflow: hidden;
+    overflow: hidden;
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 }
 
 	.subteam li h4{
-		margin: 20px 0px 10px 0px;
+		margin: 20px 0px 0px 0px;
+        text-align: left;
 	}
 
 	.subteam li img{
 		width: 140px;
 		margin: 0px;
 		float: left;
+        margin-right: 15px;
 	}
 
 	.subteam li p{
 		margin-bottom: 10px;
 		font-family: "Open Sans";
-		font-size: 1.2em;
-		letter-spacing: 1.5px;
+		font-size: 1.1em;
+        letter-spacing: 0.8px;
+        text-align: left;
+        line-height: 1.2em;
 	}
 
 	.subteam li a{
